rm right panel from fig.8

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -3,7 +3,7 @@
 The primary goals of DUNE are to 
 constrain or discover CP violation in the lepton sector by determining 
 the value of the
-CP violating phase, $\delta_{CP}$, in the PMNS mixing matrix and
+CP violating phase, $\delta_{CP}$, and
 to determine the mass ordering of the three neutrino mass eignestates. 
 This will be accomplished through measurement of 
 appearance rate of electron neutrinos and electron anti-neutrinos 
@@ -201,12 +201,13 @@ is achieved in those cases.
 \subsection {Summary of Beam Particle Requirements}
 
 Table~\ref{tab:runsum} summarizes the requested particle types and momenta along with 
-required exposures for the test beam program.
+required sample sizes for the test beam program.
 \begin{table}[h]
 \centering
 \begin{tabular}{|c|c|c|l|}
 \hline
-Particle & Momenta (GeV/c) & Exposure & Purpose \\ \hline
+Particle & Momenta (GeV/c) & Sample & Purpose \\ 
+ &  &  Size &  \\ \hline \hline
 $\pi^+$       & 0.2, 0.3, 0.4, 0.5, 0.7, 1, 2, 3, 5, 7     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
 $\pi^-$       &  0.2, 0.3, 0.4, 0.5, 0.7, 1     &  10K  & hadronic cal, $\pi^0$ content \\ \hline
 $\pi^+$   &  2  &  600K & $\pi^o$/$\gamma$ sample \\ \hline
@@ -216,7 +217,7 @@ proton &  1   &  1M & mis-ID pdk, recombination \\ \hline
 e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10K   & e-$\gamma$ separation/EM shower     \\ \hline
 % e$^+$ or e$^-$  &  1 \& 2  &  10K  & vary angle($\times$5), reco \\ \hline
 %e$^+$ or e$^-$   (w/rad) &  3  &  20K  & tagged photons \\ \hline
-$\mu^-$  &   (0.2), 0.5, 1, 2  &  10K & $E_\mu$, Michel el., charge sign \\ \hline
+$\mu^-$  &   (0.2), 0.5, 1, 2  &  10K & $E_\mu$, charge sign \\ \hline
 $\mu^+$ &   (0.2), 0.5, 1, 2   &  10K & $E_\mu$, Michel el.,charge sign  \\ \hline
 $\mu^-$ or $\mu^+$ &   3, 5, 7  &  5K & $E_\mu$ MCS \\ \hline
 %$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
@@ -567,20 +568,11 @@ from the energy deposition pattern.
 
 \begin{figure}[h!]
   \centering
-%\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid}
-%\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pid_probabilities}
 \includegraphics[width=0.49\textwidth,height=6.0cm]{figures/eff-bgdrej-diffen}
-\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
+%\includegraphics[width=0.49\textwidth,height=6.0cm]{figures/APAT600_all_norm}
   \caption{
- (left) Photon background rejection % Background rejection 
-versus electron identification efficiency for various energies, calculated for sample which pass the reconstruction. 
-%The background is due to mid-identified photons.
-The simulation was performed in APA design configuration (4.67~mm wire pitch, induction wires at $\pm$35.7$^{\circ}$ w.r.t. collection wires). (right) Photon background rejection versus electron identification efficiency
-integrated over the energy range 0.2-1.0 GeV for two different readout designs: APA parameters as on the left plot, ICARUS parameters: 3~mm wire pitch, induction wires at $\pm$60$^{\circ}$ w.r.t. collection wires. 
-Rejection and efficiency values are normalized to the full data sample size, including events which do not pass reconstruction.
-%(Left)Background rejection versus signal efficiency for various energies.
-%{\color{red}
-%}
+ Photon background rejection versus electron identification efficiency for various energies, calculated for and normalized to samples which pass the reconstruction. 
+The simulation was performed in APA design configuration (4.67~mm wire pitch, induction wires at $\pm$35.7$^{\circ}$ w.r.t. collection wires). 
 }
 \label{fig:egam}
 \end{figure}
@@ -598,25 +590,23 @@ APA geometry configuration ~\cite{dunecdr}.
 %event reconstruction chain 
 The results are found to be mildly dependent
 on incoming particle energy in the range of interest. 
-%Greater than 90\% background rejection can be 
-%achieved with $>$70\% efficiency for energies above 300~MeV. (Above 1~GeV 
-%rejection is even greater at high efficiency).
+%
 Our studies indicate that rejection and efficiency depend 
 on particular features of the geometry including wire pitch and plane 
 orientation which affect the reconstruction. 
-For example, Fig.~\ref{fig:egam} (right) shows a comparison of background
-rejection versus signal efficiency for simulated
-DUNE APA configuration compared with with ICARUS T600 geometry.
-%integrated over the energy range 0.2-1.0 GeV. 
+For example, a comparison of signal efficiencies for a simulated 
+DUNE APA configuration and with the ICARUS T600 geometry
+and averaged over the energy range 0.2-1.0 GeV shows 
+a 10\% higher efficiency for the 3~mm wire spacing used in ICARUS.
+%
 Pure samples of electrons and photons in the sub-GeV energy range will be
 needed to tune the separation algorithms and to measure 
 detector-dependent electron-photon separation efficiency and purity.
 
-%Therefore, it is critically important 
-%to study e/$\gamma$ separation in a prototype LAr TPC detector.
+%(right) Photon background rejection versus electron identification efficiency
+%integrated over the energy range 0.2-1.0 GeV for two different readout designs: APA parameters as on the left plot, ICARUS parameters: 3~mm wire pitch, induction wires at $\pm$60$^{\circ}$ w.r.t. collection wires. 
+%Rejection and efficiency values are normalized to the full data sample size, including events which do not pass reconstruction.
 
-%More discussion of specific samples to be used here.
-% move to table section.
 
 
 
