edits from Thomas

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -3,7 +3,7 @@
 The primary goals of DUNE are to 
 constrain or discover CP violation in the lepton sector by determining 
 the value of the
-CP violating phase, $\delta_{CP}$, in the PMNS mixing matrix and
+CP violating phase, $\delta_{CP}$, in the mixing matrix and
 to determine the mass ordering of the three neutrino mass eignestates. 
 This will be accomplished through measurement of 
 appearance rate of electron neutrinos and electron anti-neutrinos 
@@ -19,7 +19,7 @@ needed to control and understand systematic uncertainties in DUNE oscillation me
 %The program also includes measurements to support other important DUNE physics measurements as described below.
 %detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
 As an example of the importance of controlling detector related uncertainties,
-Fig.~\ref{fig:spectraleffect} shows the effect of a lepton energy scale 
+Fig.~\ref{fig:newlabel} shows the effect of a lepton energy scale 
 shift of -5\% on the measured 
 appearance signal %(for $\delta_{CP}=0$)
  and backgrounds in DUNE. 
@@ -32,7 +32,7 @@ $\delta_{CP}$ phase.
 \centering
 %\includegraphics[width=0.7\textwidth,height=7.7cm]{figures/lepbias10}
 \includegraphics[width=0.7\textwidth,height=7.7cm]{figures/CSPP_LeptonBias_nue_app_FHC}
-\label{fig:spectraleffect}
+\label{fig:newlabel}
   \caption{DUNE $\nu_e$ appearance signal and background spectra. 
 Solid curves show the effect of -5\% lepton energy scale shift on the 
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
@@ -50,8 +50,10 @@ energy scale uncertainties will impact DUNE
 mass hierarchy (left) and $\delta_{CP}$ (right) sensitivities.
 The exposure to achieve this level of sensitivity corresponds to 
 %The nominal sensitivity assumes a
- 230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
-details of the LBNF neutrino beam design.
+% 230-400 kt-MW-years for mass hierarchy and  850-1320 kt-MW-years for CPV depending on the 
+115 kt-MW-years in each of neutrino and antineutrino modes.
+%The sensitivities will also depend on the
+%details of the LBNF neutrino beam design.
 %exposure with equal neutrino and antineutrino running. 
 Work to evaluate the effect of all systematic uncertainties in DUNE sensitivities is still in progress.
 This study already indicates a signficant reduction of the CPV peak sensitivity. 
@@ -93,7 +95,7 @@ A 115 kt-MW-years exposure in each of neutrino and antineutrino modes is assumed
 %\end{tabular}
 
 
-\subsection{Summary of Detector and Beam Requirements }
+\subsection{Detector and Beam Requirements }
 \label{detbeam_main}
 
 LAr TPC technology was first proposed for use in neutrino experiments by C. Rubbia in 1977
@@ -146,7 +148,7 @@ longitudinal and transverse dimensions to contain showering particles up to the 
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse 
 energy containment for proton showers up to 10~GeV in energy.
 For 10 GeV showers, more than 95\% of the energy is contained in a detector of longitudinal size of 6~m and 
-radius of 2.5~m. Showers from pions, kaons, and electrons have also been studied and better containment
+radius of 2.5~m. Showers from pions, kaons, and electrons have also been studied and similar or better containment
 is achieved in those cases. 
 \begin{figure}[htp]
   \centering
@@ -198,7 +200,7 @@ is achieved in those cases.
 %\label{detbeam_rates}
 %Estimation of  beam particles rates  necessary to collect high enough statistics in a reasonable time to obtain goals of of the measurements.
 % THis should be discussed in the beam section
-\subsection {Summary of Beam Particle Requirements}
+\subsection {Beam Particle Requirements}
 
 Table~\ref{tab:runsum} summarizes the requested particle types and momenta along with 
 required exposures for the test beam program.
@@ -216,7 +218,7 @@ proton &  1   &  1M & mis-ID pdk, recombination \\ \hline
 e$^+$ or e$^-$       &    0.2, 0.3, 0.4, 0.5, 1, 2, 3, 5, 7        &    10K   & e-$\gamma$ separation/EM shower     \\ \hline
 % e$^+$ or e$^-$  &  1 \& 2  &  10K  & vary angle($\times$5), reco \\ \hline
 %e$^+$ or e$^-$   (w/rad) &  3  &  20K  & tagged photons \\ \hline
-$\mu^-$  &   (0.2), 0.5, 1, 2  &  10K & $E_\mu$, Michel el., charge sign \\ \hline
+$\mu^-$  &   (0.2), 0.5, 1, 2  &  10K & $E_\mu$, charge sign \\ \hline
 $\mu^+$ &   (0.2), 0.5, 1, 2   &  10K & $E_\mu$, Michel el.,charge sign  \\ \hline
 $\mu^-$ or $\mu^+$ &   3, 5, 7  &  5K & $E_\mu$ MCS \\ \hline
 %$\mu^-$ or $\mu^+$  &  1 \& 2  &  5K  & vary angle ($\times$5), reco \\ \hline
