--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -19,7 +19,7 @@ needed to control and understand systematic uncertainties in DUNE oscillation me
 %The program also includes measurements to support other important DUNE physics measurements as described below.
 %detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
 As an example of the importance of controlling detector related uncertainties,
-Fig.~\ref{fig:newlabel} shows the effect of a lepton energy scale 
+Fig.~\ref{fig:spectraleffect} shows the effect of a lepton energy scale 
 shift of -5\% on the measured 
 appearance signal %(for $\delta_{CP}=0$)
  and backgrounds in DUNE. 
@@ -32,13 +32,8 @@ $\delta_{CP}$ phase.
 \centering
 %\includegraphics[width=0.7\textwidth,height=7.7cm]{figures/lepbias10}
 \includegraphics[width=0.7\textwidth,height=7.7cm]{figures/CSPP_LeptonBias_nue_app_FHC}
-<<<<<<< HEAD
-\label{fig:newlabel}
+\label{fig:spectraleffect}
   \caption{DUNE $\nu_e$ appearance signal and background spectra. 
-=======
-
-  \caption{\label{fig:spectraleffect} DUNE $\nu_e$ appearance signal and background spectra. 
->>>>>>> 2c5b198b7d3b11295a0b469fcfe62a9005ecfa0b
 Solid curves show the effect of -5\% lepton energy scale shift on the 
 measured appearance $\nu_e$ and $\overline{\nu}_e$ signals assuming $\delta_{CP}=0$.
 The crosses show the expected signal shape for $\delta_{CP}=+\pi/2$ (lower crosses) and -$\pi/2$  (upper crosses). 
